todo-client/k8s/client-ingress-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: client-svc
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: todo-client.default.svc.cluster.local
