todo-client/k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-client
  labels:
    app: todo-client
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

  selector:
    app: todo-client
