todo-client/k8s/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 'todogo.hopto.org'
    http:
      paths:
      - path: /todo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 80
